tests/NormalTests/paczka1/small_fuzzy/47792413.err
Error in line 1: HomkGtwYm S236 45,9
Error in line 6: t033ory3 A640 61,99
Error in line 2: jJEBQ7KwExv S59 17,4
Error in line 4: 2wd4Pl05 S59 50,3
